--- a/smblearning-v1-fe/src/pages/Home.css
+++ b/smblearning-v1-fe/src/pages/Home.css
@@ -1,5 +1,8 @@
 @media screen and (max-width: 768px) {
-  .home .dashboard {
+  .home .dashboard,
+  .home .courses,
+  .home .users,
+  .home .new-user {
     width: 100%;
   }
 }
