--- a/smblearning-v1-fe/src/components/Sidebar.css
+++ b/smblearning-v1-fe/src/components/Sidebar.css
@@ -3,7 +3,9 @@
   padding-top: 2em;
   width: 17vw;
   background: #ffffff;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  -moz-boxshadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
 .sidenav .back-btn {
@@ -38,13 +40,14 @@
 }
 
 .sidenav .nav-menu li a {
+  text-decoration: none;
   font-size: 1.1rem;
   line-height: 1.54em;
   display: block;
   padding: 0.85em 2em 0.85em 1.5em;
 }
 
-.sidenav .nav-menu li.active a {
+.sidenav .nav-menu li a.active {
   background: rgba(0, 178, 238, 0.25);
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -58,9 +61,9 @@
 
 .sidenav .nav-menu li span {
   margin-left: 1.5em;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 1.5em;
   color: rgba(0, 178, 238, 1);
 }
 
@@ -113,5 +116,12 @@
 @media screen and (max-width: 320px) {
   .sidenav .nav-menu li svg {
     display: none;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .sidenav {
+    position: fixed;
+    margin-right: auto;
   }
 }
