--- a/smblearning-v1-fe/src/pages/Dashboard.css
+++ b/smblearning-v1-fe/src/pages/Dashboard.css
@@ -1,13 +1,13 @@
 .dashboard {
   height: 100vh;
-  padding: 2em;
+  padding: 2em 1.5em;
   width: 83%;
 }
 
 .dashboard h1 {
-  font-size: 2.2em;
+  font-size: 2.2rem;
   font-weight: 400;
-  line-height: 54px;
+  line-height: 1.53em;
   margin-bottom: 1.4rem;
 }
 
@@ -21,11 +21,10 @@
 }
 
 .dashboard .dashboard-items p.title {
-  font-size: 1.2em;
-  font-style: normal;
+  font-size: 1.1rem;
   font-weight: 400;
-  line-height: 27px;
-  margin-top: 10px;
+  line-height: 1.53em;
+  margin-top: 0.57em;
 }
 
 .dashboard .dashboard-items p.num {
@@ -140,5 +139,11 @@
   .second-row .bar span {
     font-size: 0.6em;
     line-height: 18px;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .dashboard {
+    margin-left: auto;
   }
 }
