--- a/smblearning-v1-fe/src/pages/Dashboard.css
+++ b/smblearning-v1-fe/src/pages/Dashboard.css
@@ -57,7 +57,19 @@
 .second-row .charts {
   width: 58%;
   margin-right: 2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
+.second-row .charts .exam_quiz_stats {
+  width: 42%;
+}
+.second-row .charts .courses_stats {
+  width: 42%;
+}
+/* .second-row .charts .exam_quiz_stats {
+  width: 38%;
+} */
 
 .second-row .bar {
   width: 40%;
