--- a/smblearning-v1-fe/src/pages/UserProfile.css
+++ b/smblearning-v1-fe/src/pages/UserProfile.css
@@ -46,12 +46,13 @@
   margin-bottom: 1.875em;
 }
 
-.user-info .content .d-flex:nth-last-of-type(1) {
+.user-info .content .in-progress {
   margin-bottom: 0;
 }
 
 .user-info .content .d-flex img {
   width: 60px;
+  height: 85px;
 }
 
 .user-info .content .d-flex div {
@@ -71,6 +72,10 @@
   line-height: 1.5em;
   color: rgba(0, 0, 0, 0.5);
   margin-bottom: 0;
+}
+
+.user-profile form {
+  margin-bottom: 3.5rem;
 }
 
 .user-profile form .form-row {
@@ -145,21 +150,40 @@
     justify-content: space-between;
   }
 
-  /* .user-info .name-avatar {
-    width: 35%;
-  } */
+  .user-info .name-avatar {
+    width: 32%;
+  }
 
-  /* .user-info .courses-stat {
-    width: 60%;
-  } */
+  .user-info .courses-stat {
+    width: 68%;
+  }
 
   .user-profile .user-info .courses-stat .content {
     display: flex;
     flex-direction: unset;
+    justify-content: space-between;
   }
   /* .user-info .courses-stat .content .d-flex {
     margin-right: 6%;
   } */
+
+  .user-info .content .in-progress {
+    margin-bottom: auto;
+  }
+
+  .user-profile form {
+    padding: 2em 3em;
+    box-shadow: 0px 4px 20px #cccccc;
+  }
+
+  .user-profile form .names {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .user-profile form .names .form-group {
+    width: 49%;
+  }
 }
 
 @media screen and (min-width: 1080px) {
